--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -16,7 +16,7 @@ section, footer, nav{
 	background-color:#ddd;
 }
 #titulo{
-	background-color:#08f;
+	background-color:#000;
 	height:60px;
 	text-align:left;
 	color:#fff;
